<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_course"
        android:icon="@drawable/ic_reload_24dp"
        android:title="@string/refresh_course"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_course"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add_course"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/switch_semester"
        android:icon="@drawable/ic_semester_24dp"
        android:title="@string/switch_semester"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_back_24dp"
        android:title="@string/back"
        app:showAsAction="ifRoom"/>
</menu>
