<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="cn.mapotofu.everydaymvvm.viewmodel.state.AboutViewModel" />
    </data>

    <ScrollView
        android:id="@+id/about_fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:paddingBottom="@dimen/dp20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp50">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp12"
                    android:layout_marginTop="@dimen/dp100"
                    android:text="@string/app_name"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/t22"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/versionSlogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/dp16"
                    android:lineSpacingExtra="@dimen/t2"
                    android:text="@={viewmodel.versionSlogan}"
                    android:textSize="@dimen/t18"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <ImageView
                    android:id="@+id/imageLogo"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp90"
                    android:padding="@dimen/dp10"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toBottomOf="@id/versionSlogan"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="24dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline29">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp25"
                        android:layout_marginBottom="@dimen/dp25">

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/developers"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="@dimen/t18"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/courseNameSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/developer_subtitle"
                            app:layout_constraintStart_toStartOf="@+id/textView33"
                            app:layout_constraintTop_toBottomOf="@+id/textView33" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp25">

                        <TextView
                            android:id="@+id/materialTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/materials"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/materialSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/material_subtitle"
                            app:layout_constraintStart_toStartOf="@+id/materialTitle"
                            app:layout_constraintTop_toBottomOf="@+id/materialTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="40dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp25"
                    android:layout_marginBottom="@dimen/dp25">

                    <TextView
                        android:id="@+id/saySomeThingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/say_some_thing"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/t18"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/saySomeThingSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/dp16"
                        android:text="@string/say_some_thing_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/saySomeThingTitle"
                        app:layout_constraintTop_toBottomOf="@id/saySomeThingTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="40dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp25"
                    android:layout_marginBottom="@dimen/dp25">

                    <TextView
                        android:id="@+id/textView33_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/open_source"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/t18"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView34_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/dp16"
                        android:text="@string/open_source_subtitle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView33_3"
                        app:layout_constraintTop_toBottomOf="@+id/textView33_3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>
</layout>