<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="cn.mapotofu.everydaymvvm.viewmodel.state.LoginViewModel" />

        <variable
            name="click"
            type="cn.mapotofu.everydaymvvm.ui.fragment.login.LoginFragment.ProxyClick" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/deep_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="48dp"
                android:text="@string/login_hint"
                android:textColor="@android:color/black"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittextStudentNumber"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="52dp"
                app:startIconDrawable="@drawable/ic_user"
                app:boxStrokeWidth="0px"
                app:boxStrokeWidthFocused="0px"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:autofillHints="学号"
                    android:background="@drawable/shape_rounded_edittext"
                    android:enabled="@{!viewmodel.requestInProgress}"
                    android:drawablePadding="8dp"
                    android:hint="@string/account_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text="@={viewmodel.stuId}"
                    android:nextFocusForward="@id/buttonLogin"
                    android:paddingHorizontal="20dp"
                    android:textSize="18sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittextStudentPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/ic_password"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0px"
                app:boxStrokeWidthFocused="0px"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/edittextStudentNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="密码"
                    android:background="@drawable/shape_rounded_edittext"
                    android:enabled="@{!viewmodel.requestInProgress}"
                    android:drawablePadding="8dp"
                    android:hint="@string/password_hint"
                    android:text="@={viewmodel.stuPasswd}"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:nextFocusForward="@id/buttonLogin"
                    android:paddingHorizontal="20dp"
                    android:textSize="18sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="36dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="32dp"
                android:text="@string/login_button_text"
                android:textAlignment="gravity"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:iconGravity="textStart"
                android:onClick="@{()->click.login()}"
                android:enabled="@{(viewmodel.stuPasswd.length()>=6)&amp;&amp;(viewmodel.stuId.length()>=11)&amp;&amp;(viewmodel.requestInProgress == false)}"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/edittextStudentPassword"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.11" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_agreement_text"
                android:onCheckedChanged="@{click.onPrivacyCheckedChangeListener}"
                android:textColor="?attr/scrimBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin">

            </com.google.android.material.checkbox.MaterialCheckBox>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>